--- a/app/views/cover_view/_game_info.html.erb
+++ b/app/views/cover_view/_game_info.html.erb
@@ -35,257 +35,14 @@
             <% end %>
         </p>
         <% end %>
-        <!-- CHECK USERS COLLECTIONS -->
-        <% in_initial = {} %>
-        <% @initial_collections.each_value do |collection| %>
-        <% in_initial["#{collection.form}"] = collection.games.find_by(igdb_id: igdb_id) ? true : false %>
-        <% end %>
-        <% in_custom = @custom_collections.any? do |custom_c| %>
-        <% custom_c.games.find_by(igdb_id: igdb_id) %>
-        <% end %>
-        <!-- PREPARE SCREENS -->
-        <% screens = game[:screenshots] %>
-        <!-- NAVIGATION -->
-        <div class="info-nav">
-            <ul class="uk-iconnav i-nav">
-                <!-- COLLECTION -->
-                <li>
-                    <% collection = @initial_collections['collection'] %>
-                    <% tooltip = 'Add to / Remove from ' + (collection.name) %>
-                    <% extra_class = in_initial['collection'] ? 'remove' : '' %>
-                    <%= content_tag(:a, '',id: "add-collection-#{ igdb_id }", class: "uk-icon-link " + extra_class,
-                    'uk-icon' => 'database', 'uk-tooltip' => "title: #{tooltip}; pos: top-left") %>
-                    <div class="underlight"></div>
-                </li>
-                <!-- WISHLIST -->
-                <!-- ___ADD -->
-                <% collection = @initial_collections['wishlist'] %>
-                <%= content_tag(:li, id: "add-wishlist-form-" + igdb_id.to_s,  style: in_initial['wishlist'] ? 'display: none;' : nil) do %>
-                <%= render partial: "cover_view/add_form_no_platform",
-                locals: { game: game, devs: devs, screens: screens, collection: collection, icon: 'star' } %>
-                <% end %>
-                <!-- ___REMOVE -->
-                <%= content_tag(:li, id: "remove-wishlist-form-" + igdb_id.to_s,  style: !in_initial['wishlist'] ? 'display: none;' : nil) do %>
-                <% tooltip = 'Remove from ' + (collection.name) %>
-                <%= link_to '', remove_s_url(game_id: igdb_id, collection_id: collection.id, id_type: 'igdb'),
-                class: 'uk-icon-link remove', method: :delete, remote: true, 'uk-icon' => 'star', 'uk-tooltip' => "title: #{tooltip}; pos: top-left" %>
-                <div class="underlight"></div>
-                <% end %>
-                <!-- PLAYED -->
-                <!-- ___ADD -->
-                <% collection = @initial_collections['played'] %>
-                <%= content_tag(:li, id: "add-played-form-" + igdb_id.to_s,
-                style: in_initial['played'] ? 'display: none;' : nil) do %>
-                <%= render partial: "cover_view/add_form_no_platform",
-                locals: { game: game, devs: devs, screens: screens, collection: collection, icon: 'bell' } %>
-                <% end %>
-                <!-- ___REMOVE -->
-                <%= content_tag(:li, id: "remove-played-form-" + igdb_id.to_s, style: !in_initial['played'] ? 'display: none;' : nil) do %>
-                <% tooltip = 'Remove from ' + (collection.name) %>
-                <%= link_to '', remove_s_url(game_id: igdb_id, collection_id: collection.id, id_type: 'igdb'),
-                class: 'uk-icon-link remove', method: :delete, remote: true, 'uk-icon' => 'bell', 'uk-tooltip' => "title: #{tooltip}; pos: top-left" %>
-                <div class="underlight"></div>
-                <% end %>
-                <!-- CUSTOM -->
-                <li>
-                    <% tooltip = 'Add to / Remove from Custom Collections' %>
-                    <% extra_class = in_custom ? 'remove' : '' %>
-                    <%= content_tag(:a, '',id: "add-custom-#{ igdb_id }", class: "uk-icon-link " + extra_class,
-                    'uk-icon' => 'cog', 'uk-tooltip' => "title: #{ tooltip }; pos: top-left") %>
-                    <div class="underlight"></div>
-                </li>
-            </ul>
-        </div>
-        <!-- ADD GAME TO COLLECTION -->
-        <div class="b-<%= igdb_id %>">
-            <div id="add-collection-form-<%= igdb_id %>" class="add-form" uk-dropdown="toggle: #add-collection-<%= igdb_id %>; mode: click; pos: bottom-left; delay-hide: 100; boundary-align: true; boundary: .b-<%= igdb_id %>" >
-                <button class="uk-dropdown-close add-form-close" type="button" uk-close></button>
-                <% if game[:platforms] %>
-                    <%= form_for(:game, url: games_path, remote: true) do |f| %>
-                    <% collection = @initial_collections['collection'] %>
-                    <%= hidden_field_tag :collection, collection.id %>
-                    <%= f.hidden_field :needs_platform, value: true %>
-                    <%= f.hidden_field :name, value: game_name %>
-                    <%= f.hidden_field :igdb_id, value: igdb_id %>
-                    <% if platforms = game[:platforms] %>
-                        <% platforms.each do |id| %>
-                            <%= f.hidden_field :platforms, value: id, multiple: true %>
-                        <% end %>
-                    <% end %>
-                    <% if p_names = game[:platforms_names] %>
-                        <% p_names.each do |p_name| %>
-                            <%= f.hidden_field :platforms_names, value: p_name, multiple: true %>
-                        <% end %>
-                    <% end %>
-                    <%= f.hidden_field :first_release_date, value: game[:first_release_date] %>
-                    <%= f.hidden_field :summary, value: game[:summary] %>
-                    <%= f.hidden_field :status, value: game[:status] %>
-                    <%= f.hidden_field :category, value: game[:category] %>
-                    <% if platforms = game[:cover] %>
-                        <%= f.hidden_field :cover, value: game[:cover] %>
-                    <% end %>
-                    <%= f.hidden_field :cover_width, value: game[:cover_width] %>
-                    <%= f.hidden_field :cover_height, value: game[:cover_height] %>
-                    <% if devs %>
-                        <% devs.each do |dev| %>
-                            <%= f.hidden_field :developers, value: dev, multiple: true %>
-                        <% end %>
-                    <% end %>
-                    <% if screens %>
-                        <% screens.each do |screen| %>
-                            <%= f.hidden_field :screenshots, value: screen, multiple: true %>
-                        <% end %>
-                    <% end %>
-                    <div class="select-platform">
-                        <div uk-form-custom="target: > * > span:last-child">
-                            <% if game[:platforms].size > 1 %>
-                                <%= f.select(:platform, platforms_for_select(game), include_blank: 'Select platform') %>
-                                <span class='bigs'>
-                                <span class="platform-icon"><%= svg 'platform_icon' %></span>
-                                <span></span>
-                                </span>
-                            <% else %>
-                                <%= f.select(:platform, platforms_for_select(game)) %>
-                                <span class='bigs'>
-                                <span class="platform-green"><%= svg 'platform_icon' %></span>
-                                <span></span>
-                                </span>
-                            <% end %>
-                        </div>
-                    </div>
-                    <div class="uk-margin uk-grid-small uk-child-width-1-2 uk-grid">
-                        <label><%= f.radio_button(:physical, true, checked: true, class: "physical") %><%= svg 'gamebox_icon' %> Physical</label>
-                        <label><%= f.radio_button(:physical, false, class: "digital") %><%= svg 'digital_icon' %> Digital</label>
-                    </div>
-                    <button name="button" type="submit" class="add-button">Add</button><span class="add-form-errors"></span>
-                    <% end %>
-                    <!-- ALREADY IN -->
-                    <div class="already-in">
-                        <%= render(partial: 'cover_view/already_in_collection', locals: { collection: collection, game_name: game_name, igdb_id: igdb_id }) if in_initial['collection']  %>
-                    </div>
-                <% else %>
-                    <p>You cant add game with no platform to your main collection,
-                    will be fixed soon</p>
-                <% end %>
-            </div>
-            <!-- ADD TO CUSTOM COLLECTION -->
-            <div id="add-custom-form-<%= igdb_id %>" class="add-form" uk-dropdown="toggle: #add-custom-<%= igdb_id %>; mode: click; pos: bottom-left; delay-hide: 100; boundary-align: true; boundary: .b-<%= igdb_id %>">
-                <button class="uk-dropdown-close add-form-close" type="button" uk-close></button>
-                <% if @custom_collections.any? %>
-                <%= form_for(:game, url: games_path, remote: true) do |f| %>
-                <%= hidden_field_tag :form, 'custom' %>
-                <!-- GAME -->
-                <%= f.hidden_field :name, value: game_name %>
-                <%= f.hidden_field :igdb_id, value: igdb_id %>
-                <% if platforms = game[:platforms] %>
-                    <% platforms.each do |id| %>
-                        <%= f.hidden_field :platforms, value: id, multiple: true %>
-                    <% end %>
-                <% end %>
-                <% if p_names = game[:platforms_names] %>
-                    <% p_names.each do |p_name| %>
-                        <%= f.hidden_field :platforms_names, value: p_name, multiple: true %>
-                    <% end %>
-                <% end %>
-                <%= f.hidden_field :first_release_date, value: game[:first_release_date] %>
-                <%= f.hidden_field :summary, value: game[:summary] %>
-                <%= f.hidden_field :status, value: game[:status] %>
-                <%= f.hidden_field :category, value: game[:category] %>
-                <%= f.hidden_field :cover, value: game[:cover] %>
-                <%= f.hidden_field :cover_width, value: game[:cover_width] %>
-                <%= f.hidden_field :cover_height, value: game[:cover_height] %>
-                <% if devs %>
-                <% devs.each do |dev| %>
-                <%= f.hidden_field :developers, value: dev, multiple: true %>
-                <% end %>
-                <% end %>
-                <% if screens %>
-                <% screens.each do |screen| %>
-                <%= f.hidden_field :screenshots, value: screen, multiple: true %>
-                <% end %>
-                <% end %>
-                <!-- SELECT COLLECTION -->
-                <div class="select-collection">
-                    <% if @custom_collections.size > 1 %>
-                    <div uk-form-custom="target: > * > span:last-child">
-                        <%= select_tag(:collection, options_for_select(collections_for_select(current_user)), include_blank: 'Select custom collection') %>
-                        <span class="bigs">
-                            <span class="collection-icon"><%= svg 'shelf_icon' %></span>
-                            <span></span>
-                        </span>
-                    </div>
-                    <% else %>
-                    <div uk-form-custom="target: > * > span:last-child">
-                        <%= select_tag(:collection, options_for_select(collections_for_select(current_user))) %>
-                        <span class="bigs">
-                            <span class="collection-green"><%= svg 'shelf_icon' %></span>
-                            <span></span>
-                        </span>
-                    </div>
-                    <% end %>
-                </div>
-                <!-- DEPENDS ON COLLECTION -->
-                <div id="platform-option" style="display: none">
-                    <% if game[:platforms] %>
-                        <%= f.hidden_field :needs_platform, value: false %>
-                        <div class="uk-margin select-platform">
-                            <div uk-form-custom="target: > * > span:last-child">
-                                <% if game[:platforms].size > 1 %>
-                                <%= f.select(:platform, platforms_for_select(game), include_blank: 'Select platform') %>
-                                <span class='bigs'>
-                                    <span class="platform-icon"><%= svg 'platform_icon' %></span>
-                                    <span></span>
-                                </span>
-                                <% else %>
-                                <%= f.select(:platform, platforms_for_select(game)) %>
-                                <span class='bigs'>
-                                    <span class="platform-green"><%= svg 'platform_icon' %></span>
-                                    <span></span>
-                                </span>
-                                <% end %>
-                            </div>
-                        </div>
-                        <div class="uk-margin uk-grid-small uk-child-width-1-2 uk-grid">
-                            <label><%= f.radio_button(:physical, true, checked: true, class: "physical") %><%= svg 'gamebox_icon' %> Physical</label>
-                            <label><%= f.radio_button(:physical, false, class: "digital") %><%= svg 'digital_icon' %> Digital</label>
-                        </div>
-                    <% else %>
-                        <p>You cant add game with no platform to collection that needs platform
-                        will be fixed soon</p>
-                    <% end %>
-                </div>
-                <button name="button" type="submit" class="add-button">Add</button><span class="add-form-errors"></span>
-                <% end %>
-                <!-- ALREADY IN -->
-                <div class="already-in">
-                    <%= render(partial: 'cover_view/already_in_custom', locals: { game_name: game_name, igdb_id: igdb_id }) if in_custom %>
-                </div>
-                <% else %>
-                <p>Create custom collection first.</p>
-                <% end %>
-            </div>
-        </div>
         <!-- SUMMARY -->
         <% if summary = get_summary(game, 280, 50) %>
-        <p class="info-summary"><%= summary[:start] %><% if summary[:end] %><span class="dots" id="dots-<%= igdb_id %>"><%= summary[:span] %><button class="uk-icon-link uk-icon ms-b-down" onclick="myFunction(<%= igdb_id %>)" uk-icon="icon: triangle-down"></button></span> <span id="more-<%= igdb_id %>" class="more"><%= summary[:end] %><button class="uk-icon-link uk-icon ms-b-up" onclick="myFunction(<%= igdb_id %>)" uk-icon="icon: triangle-up"></button></span>
+        <p class="info-summary"><%= summary[:start] %><% if summary[:end] %><span class="dots" id="dots-<%= igdb_id %>"><%= summary[:span] %><button class="uk-icon-link uk-icon ms-b-down" onclick="myFunction(<%= igdb_id %>)" uk-icon="icon: triangle-down"></button></span> <span id="more-<%= igdb_id %>" class="more"><%= summary[:end] %><button class="uk-icon-link uk-icon ms-b-up" onclick="shortSummary(<%= igdb_id %>)" uk-icon="icon: triangle-up"></button></span>
     </p>
-    <script>
-    function myFunction(id) {
-    var dots = document.getElementById("dots-" + id);
-    var moreText = document.getElementById("more-" + id);
-    if (dots.style.display === "none") {
-    dots.style.display = "inline";
-    moreText.style.display = "none";
-    } else {
-    dots.style.display = "none";
-    moreText.style.display = "inline";
-    }
-    }
-    </script>
     <% end %>
     <% end %>
     <!-- SLIDESHOW -->
-    <% if screens %>
+    <% if screens = game[:screenshots] %>
     <% urls = screens_urls(screens) %>
     <div class="uk-position-relative md-slide" uk-slideshow="animation: fade" uk-lightbox="toggle: .uk-position-cover; animation: fade">
         <ul class="uk-slideshow-items md-slide-items">
@@ -333,80 +90,4 @@
         </div>
     </div>
 </div>
-<script type="text/javascript">
-// UNDERLINE OWNED GAMES ON COVER VIEW - - - - - - - - - - - - - - - - - - //
-var in_custom = <%= in_custom %>;
-var in_initial = <%= in_initial.values.any? %>;
-if (in_custom || in_initial) {
-$('#gs-<%= igdb_id %> .game-name span').addClass('owned');
-}
-// FLIP GAME INFO - - - - - - - - - - - - - - - - - - - - - - - - - - //
-$('#i-flipper-<%= igdb_id %>').click(function() {
-$('body').toggleClass('uk-offcanvas-flip');
-$('#i-flipper-<%= igdb_id %>').toggleClass('flip-rotate');
-// Flip scroll-up
-$('.scroll-up').toggleClass('scroll-flip');
-// Flip notification
-if ($('.uk-notification').length) {
-$('.uk-notification').toggleClass('uk-notification-top-right');
-$('.uk-notification').toggleClass('uk-notification-top-left');
-}
-});
-// COLLECTION FORM - - - - - - - - - - - - - - - - - - - - - - - - - - //
-// CHANGE PLATFORM ICON COLOR AFTER INPUT CHANGE
-function updatePlatformIcon(form_type) {
-var form = '#add-' + form_type + '-form-<%= igdb_id %>';
-var select_element = form + ' #game_platform';
-$(select_element).on('input', function() {
-var value = $(select_element).val();
-var icon = form + ' .platform-icon';
-if (value.length > 0) {
-$(icon).attr('class', 'platform-green');
-} else {
-icon = form + ' .platform-green';
-$(icon).attr('class', 'platform-icon');
-}
-});
-}
-updatePlatformIcon('collection')
-// CUSTOM COLLECTION FORM - - - - - - - - - - - - - - - - - - - - - - -//
-// IF ONLY ONE CUSTOM COLLECTION PREPARE FORM AFTER AUTOMATICALY SELECTING IT
-if ($('#add-custom-form-<%= igdb_id %> #collection').length){
-var value = $('#add-custom-form-<%= igdb_id %> #collection').val();
-var nd = (value.split(",")[1] == 'true');
-var plat_form_element = "#add-custom-form-<%= igdb_id %> #platform-option";
-var needs_platform = "#add-custom-form-<%= igdb_id %> #game_needs_platform";
-if (nd == true) {
-$(plat_form_element).show();
-$(needs_platform).attr('value', 'true');
-} else if (nd == false) {
-$(plat_form_element).hide();
-$(needs_platform).attr('value', 'false');
-}
-}
-// CHANGE PLATFORM ICON COLOR AFTER INPUT CHANGE
-updatePlatformIcon('custom')
-// SHOW PLATFORM FORM FOR COLLECTION THAT REQUIRE PLATFORM SELECTION FOR GAMES
-// CHANGE COLLECTION ICON COLOR AFTER INPUT CHANGE
-$('#add-custom-form-<%= igdb_id %> #collection').on('input', function() {
-var value = $('#add-custom-form-<%= igdb_id %> #collection').val();
-var nd = value.length != 0 ? (value.split(",")[1] == 'true') : 'select';
-var plat_form_element = "#add-custom-form-<%= igdb_id %> #platform-option";
-var needs_platform = "#add-custom-form-<%= igdb_id %> #game_needs_platform";
-var icon = '#add-custom-form-<%= igdb_id %> .collection-icon';
-if (nd == true) {
-$(icon).attr('class', 'collection-green');
-$(plat_form_element).show();
-$(needs_platform).attr('value', 'true');
-} else if (nd == false) {
-$(icon).attr('class', 'collection-green');
-$(plat_form_element).hide();
-$(needs_platform).attr('value', 'false');
-} else if (nd == 'select'){
-icon = '#add-custom-form-<%= igdb_id %> .collection-green';
-$(icon).attr('class', 'collection-icon');
-$(plat_form_element).hide();
-$(needs_platform).attr('value', 'false');
-}
-});
-</script>
+
