--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,6 +10,7 @@
   <% if logged_in? %>
   <div class="uk-navbar-right">
     <ul class="uk-navbar-nav">
+      <li><div id="search-add" class="uk-navbar-item nav-but">Add Games</div></li>
       <li><div id="addl-hide" class="uk-navbar-item nav-but">Hide Overlays</div></li>
       <% extra = 'active' if edit_open %>
       <li><div id="g-show-edit" class="uk-navbar-item nav-but <%= extra %>">Show Options</div></li>
