Add minor changes. Improve spinner(placeholder for screenshots) in game panels.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -308,6 +308,7 @@ div.no-results {
 
 // Search Form (Search IGDB)- - - - - - - - - - - - - - - - - - - - - - - - - //
 .search-form {
+    margin-top: 20px;
     text-align: center;
 }
 
