Add spinner placeholder to game info's slide show

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -368,7 +368,7 @@ div.no-results {
 }
 
 .blink_me {
-    animation: blinker 1s linear infinite;
+    animation: blinker 1s ease-in-out infinite;
 }
 
 @keyframes blinker {
