--- a/app/assets/stylesheets/cover_view.scss
+++ b/app/assets/stylesheets/cover_view.scss
@@ -1,3 +1,34 @@
 .cv-opts {
     border: thin solid #bababa;
 }
+
+.a-spin {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+}
+
+@media (max-width: 960px) {
+    .a-spin {
+        height: 129.38px;
+    }
+}
+
+@media (min-width: 960px) {
+    .a-spin {
+        height: 151.88px;
+    }
+}
+
+.a-spin svg {
+    width: 40px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -20px;
+    margin-top: -20px;
+    fill: $light_grey;
+    animation: 1s infinite normal rotate;
+    animation-timing-function: linear;
+}
