--- a/app/views/cover_view/_game_info.html.erb
+++ b/app/views/cover_view/_game_info.html.erb
@@ -44,11 +44,12 @@
     <% if screens = game[:screenshots] %>
     <% urls = screens_urls(screens) %>
     <div class="uk-position-relative md-slide" uk-slideshow="animation: fade" uk-lightbox="toggle: .uk-position-cover; animation: fade">
-        <div class="spinner"><%= svg 'loading' %></div>
+        <div class="a-spin"><%= svg 'loading' %></div>
         <ul class="uk-slideshow-items md-slide-items">
             <% no_of_screens = 0 %>
             <% urls.each do |url| %>
                 <li>
+                    <%= image_tag('', 'data-src' => url[:small], 'uk-cover' => '', 'uk-img': '') %>
                     <%= content_tag(:a, '', href: url[:big], class: 'uk-position-cover') %>
                 </li>
                 <% no_of_screens += 1 %>
