--- a/app/views/cover_view/_already_in_custom.html.erb
+++ b/app/views/cover_view/_already_in_custom.html.erb
@@ -1,4 +1,4 @@
-<% results = check_for_games(type: 'custom', igdb_id: igdb_id) %>
+<% results = check_for_games(igdb_id: igdb_id) %>
 <% if results %>
   <hr>
   <p>"<%= game_name %>" in custom collections:</p>
