--- a/app/views/panels_view/_copy_form.html.erb
+++ b/app/views/panels_view/_copy_form.html.erb
@@ -12,7 +12,7 @@
 <hr class="md">
 <div class="select-collection">
     <div uk-form-custom="target: > * > span:last-child">
-        <%= select_tag(:collection, options_for_select(collections_for_select(current_user, 'all')), include_blank: 'Select collection') %>
+        <%= select_tag(:collection, options_for_select(collections_for_select(current_user)), include_blank: 'Select collection') %>
         <span class="bigs">
             <span class="cf-collection-icon"><%= svg 'shelf_icon' %></span>
             <span></span>
