--- a/app/views/collections/update.js.erb
+++ b/app/views/collections/update.js.erb
@@ -1,4 +1,4 @@
 UIkit.modal($('#edit-coll-modal')).hide();
 $(".side-menu").replaceWith("<%= j(render partial: 'layouts/menu') %>");
-$('#m-<%= @collection.id %>').addClass('active');
+$('#mc-<%= @collection.id %>').addClass('active');
 custom_data_confirm();
