--- a/app/views/cover_view/_add_form.html.erb
+++ b/app/views/cover_view/_add_form.html.erb
@@ -1,7 +1,3 @@
-<%= form_with model: @game do |f| %>
-<%= f.hidden_field :id, value: data[:id] %>
-<%= f.hidden_field :igdb_id, value: data[:igdb_id] %>
-
 <div class="action">
 <label class="c-m chosen">Add</span></label>
 <span class="cf-name"><%= shorter_name(data[:name]) %></span>
@@ -9,46 +5,62 @@
 
 <hr class="md">
 
-<div class="select-collection">
-    <div uk-form-custom="target: > * > span:last-child">
-        <%= f.select(:collection, options_for_select(collections_for_select(current_user)), include_blank: 'Select collection') %>
-        <span class="bigs">
-            <span class="cf-collection-icon"><%= svg 'shelf_icon' %></span>
-            <span></span>
-        </span>
-    </div>
-</div>
+<% unless (collections = collections_for_select(current_user)).empty? %>
+    <%= form_with model: @game do |f| %>
+    <%= f.hidden_field :id, value: data[:id] %>
+    <%= f.hidden_field :igdb_id, value: data[:igdb_id] %>
 
-<div id="platform-option">
-    <% if data[:platforms] %>
-    <div class="uk-margin select-platform">
+    <div class="select-collection">
         <div uk-form-custom="target: > * > span:last-child">
-            <% if data[:platforms].size > 1 %>
-            <%= f.select(:platform, platforms_for_select(data), include_blank: 'Select platform') %>
-            <span class='bigs'>
-                <span class="cf-platform-icon"><%= svg 'platform_icon' %></span>
-                <span></span>
-            </span>
+            <% if collections.size > 1 %>
+                <%= f.select(:collection, options_for_select(collections), include_blank: 'Select collection') %>
+                <span class="bigs">
+                    <span class="cf-collection-icon"><%= svg 'shelf_icon' %></span>
+                    <span></span>
+                </span>
             <% else %>
-            <%= f.select(:platform, platforms_for_select(data)) %>
-            <span class='bigs'>
-                <span class="cf-platform-green"><%= svg 'platform_icon' %></span>
-                <span></span>
-            </span>
+                <%= f.select(:collection, options_for_select(collections)) %>
+                <span class="bigs">
+                    <span class="cf-collection-green"><%= svg 'shelf_icon' %></span>
+                    <span></span>
+                </span>
             <% end %>
         </div>
     </div>
 
-    <div class="uk-margin uk-grid-small uk-grid">
-        <label><%= f.radio_button(:physical, true, checked: true, class: "cf-physical") %><%= svg 'gamebox_icon' %> Physical</label>
-        <label><%= f.radio_button(:physical, false, class: "cf-digital") %><%= svg 'digital_icon' %> Digital</label>
+    <div id="platform-option">
+        <% if data[:platforms] %>
+        <div class="uk-margin select-platform">
+            <div uk-form-custom="target: > * > span:last-child">
+                <% if data[:platforms].size > 1 %>
+                <%= f.select(:platform, platforms_for_select(data), include_blank: 'Select platform') %>
+                <span class='bigs'>
+                    <span class="cf-platform-icon"><%= svg 'platform_icon' %></span>
+                    <span></span>
+                </span>
+                <% else %>
+                <%= f.select(:platform, platforms_for_select(data)) %>
+                <span class='bigs'>
+                    <span class="cf-platform-green"><%= svg 'platform_icon' %></span>
+                    <span></span>
+                </span>
+                <% end %>
+            </div>
+        </div>
+
+        <div class="uk-margin uk-grid-small uk-grid">
+            <label><%= f.radio_button(:physical, true, checked: true, class: "cf-physical") %><%= svg 'gamebox_icon' %> Physical</label>
+            <label><%= f.radio_button(:physical, false, class: "cf-digital") %><%= svg 'digital_icon' %> Digital</label>
+        </div>
+
+        <% else %>
+        <p>You cant copy/move game with no platform to collection that needs platform
+        will be fixed soon</p>
+        <% end %>
     </div>
 
-    <% else %>
-    <p>You cant copy/move game with no platform to collection that needs platform
-    will be fixed soon</p>
+    <button name="button" type="submit" class="cf-add-button">Add</button><span class="add-form-errors"></span>
     <% end %>
-</div>
-
-<button name="button" type="submit" class="cf-add-button">Add</button><span class="add-form-errors"></span>
+<% else %>
+    <span class="italic blink_me"><%= svg 'warning' %> Please add collection first</span>
 <% end %>
